fixed row gap for product cards

--- a/css/style.css
+++ b/css/style.css
@@ -415,6 +415,7 @@ section#basic {
 .card-list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  row-gap: 2rem;
   text-align: center;
   margin-top: 2rem;
 }
